--- a/src/Native/System.Net.Http.Native/CMakeLists.txt
+++ b/src/Native/System.Net.Http.Native/CMakeLists.txt
@@ -14,7 +14,7 @@ if(CMAKE_STATIC_CURL)
 	find_library(CURL_STATIC_LIB NAMES libcurl.a)
 	if(NOT CURL_STATIC_LIB)
     		message(FATAL_ERROR "!!! Cannot find libcurl static lib and System.Net.Http.Native cannot build without it. Try installing libcurl4-openssl-dev (or the appropriate package for your platform) !!!")
-	endif(CURL_STATIC_LIB)
+	endif(NOT CURL_STATIC_LIB)
 	set(CURL_LIBRARIES ${CURL_STATIC_LIB})
 	add_compile_options(-DCURL_STATICLIB)
 endif(CMAKE_STATIC_CURL)
